完成... 问题： 1.RSS问题 2.发邮件和分页空间显示有问题 3.国际化显示中，分页显示中文乱码

--- a/templates/control/user_pagebar.html
+++ b/templates/control/user_pagebar.html
@@ -7,12 +7,12 @@
     {% ifequal page_index 1 %}
         {% trans 'First' %}
     {% else %}
-        <a href="{% url index_user_page username page_first %}">{% trans 'First' %}</a>
+        <a href="{% url 'index_user_page' username page_first %}">{% trans 'First' %}</a>
     {% endifequal %}
     </span>
     <span class="prev">
     {% if has_prev %}
-        <a href="{% url index_user_page username page_prev %}">{% trans 'Prev' %}</a>
+        <a href="{% url 'index_user_page' username page_prev %}">{% trans 'Prev' %}</a>
     {% else %}
         {% trans 'Prev' %}
     {% endif %}
@@ -20,7 +20,7 @@
     <span class="page">{{ page_index }}/{{ page_count }}</span>
     <span class="next">
     {% if has_next %}
-        <a href="{% url index_user_page username page_next %}">{% trans 'Next' %}</a>
+        <a href="{% url 'index_user_page' username page_next %}">{% trans 'Next' %}</a>
     {% else %}
         {% trans 'Next' %}
     {% endif %}
@@ -29,7 +29,7 @@
     {% ifequal page_index page_count %}
         {% trans 'Last' %}
     {% else %}
-        <a href="{% url index_user_page username page_count %}">{% trans 'Last' %}</a>
+        <a href="{% url 'index_user_page' username page_count %}">{% trans 'Last' %}</a>
     {% endifequal %}
     </span><br />
     <span class="tip">{% trans 'All of ' %} {{ row_count }} {% trans 'messages' %}</span>
