--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,7 +8,7 @@
 {% block main %}
 <div class="form">
     <div class="message">{{ state.message }}</div>
-    <form action="{% url 'tmitter_mvc_views_settings' %}" method="post" enctype="multipart/form-data">
+    <form action="{% url 'settings' %}" method="post" enctype="multipart/form-data">
         <table cellpadding="0" cellspacing="0">
             <tr>
                 <td class="field">{% trans 'Name' %}:</td>
